  * SH1108 128x160 (issue 1998)
  * SSD1306 96x39 (issue 1959)
  * S1D15300 128x64, flip mode 1 not supported, (issue 2063)
  * SSD1362 256x64 (issue 1322, issue 2051)
  * ST75256 JLX160x80 (NOT TESTED, issue 2058)
  * UC1638 240x128 (issue 2075)
  * SED1330 320x200 (issue 1086)
  * Bugfix: Clear font_height_mode during setup to ensure correct default values in 
     cases where the u8g2 struct / class is created via dynamic memory allocation (issue 2046)
  * Bugfix: Fix line draw procedure in 16 bit mode (issue 2053)
  * Added Spleen Monospaced Font from https://github.com/fcambus/spleen (issue 2015)
  * Extended the "E" font range with subscript characters if available in the original font (issue 2079)
  * Bugfix for ESP32 HW SPI Pin Remapping (issue 377, PR 2123)
  * Bugfix for LoadFromSD example (issue 2179)
  * Changed MUI_LABEL to support UTF8 (issue 2196)
  * Compiler Warning Cleanup for polygon draw (issue 1999, PR 2101)
  * Added MUI fixed width bar graph (issue 2200)
  * Added 04b fonts from u8glib (issue 2157)
  * Added "font_tiny5" (issue 2185)
  * Added MUI (https://github.com/olikraus/u8g2/wiki/muimanual) examples (issue 1747)
2024-xx-xx      v2.35.x olikraus@gmail.com
  * ST7586S JLX320160, MD240128 (no flipmode, no u8x8, issues 2186, 2363)
  * ST75161 JLX160160 (issue 2481)
  * GP1294AI 256X48 (issue 2213, PR 2222)
  * Bugfix for drawUTF8X2 with negative x values (issue 2228)
  * UC1628 256x128 (tested), 256x32 (tested), 128x64 (not tested) (issue 2260):
  * U8x8 example for 90 degree string rotation (issue 2271)
  * ST7567 96x65 (issue 2332)
  * ST7539 192x64 (issues 2146 & 2081)
  * SSD1363 256x128 (issue 2490)
  * UC1604 JLX128x64 (issue 2497)
  * LS011B7DH03 160x68 (issue 2210)
  * Examples for I2C adapter board for parallel gfx displays (issue 2191)
  * drawArc (issue 2243)
  * Added "-y" option to otf2bdf. "-y" can be used to fix issues with some fonts (issue 2406) 
  * Fixed a bug with '\n' in u8log (issue 2319) 
  
  